# adaptive-nms

./: LICENSE  MANIFEST.in  README.md  requirements-dev.txt  setup.cfg  setup.py  ssc.pyx  test.py
src/anms/: ssc.cpp  ssc.pyx
tests/: test.py
