[metadata]
name = anms
version = 0.1.0
description = Adaptive keypoints NMS via Square Covering
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Ostap Viniavskyi
author_email = ostap.viniavskyi@gmail.com
url = https://github.com/ostapViniavskyi/adaptive-nms
download_urls = https://pypi.org/project/cython-package-example
project_urls =
	Documentation =https://github.com/ostapViniavskyi/adaptive-nms
	Code = https://github.com/ostapViniavskyi/adaptive-nms
	Issue tracker = https://github.com/ostapViniavskyi/adaptive-nms/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h